# tap-honeybadger

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: build.yaml  build.yml  test.yaml  test.yml
tap_honeybadger/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: test_core.py
