[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.27",
]

[project]
name = "tap-honeybadger"
description = "Singer tap for Honeybadger, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Honeybadger",
  "singer.io",
]
license.file = "LICENSE"
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrmondragon@hey.com" },
]
authors = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrmondragon@hey.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "requests>=2,<3",
  "singer-sdk~=0.47.1",
]
urls.Documentation = "https://github.com/reservoir-data/tap-honeybadger#readme"
urls.Homepage = "https://github.com/reservoir-data/tap-honeybadger"
urls.Repository = "https://github.com/reservoir-data/tap-honeybadger"
scripts."tap-honeybadger" = "tap_honeybadger.tap:TapHoneybadger.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=8",
  "singer-sdk[testing]",
]
typing = [
  "mypy",
  "types-requests",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_honeybadger",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
types-requests = "requests"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = [
  "-vvv",
  "--durations=10",
]
filterwarnings = [
  "error",
  "default:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "backoff.*",
]

[tool.uv]
prerelease = "allow"
preview = true
required-version = ">=0.5.19"
