[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.28",
]

[project]
name = "tap-honeybadger"
description = "Singer tap for Honeybadger, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Honeybadger",
  "singer.io",
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "requests>=2,<3",
  "singer-sdk~=0.53.2",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.license]
file = "LICENSE"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
"tap-honeybadger" = "tap_honeybadger.tap:TapHoneybadger.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-honeybadger#readme"
Homepage = "https://github.com/reservoir-data/tap-honeybadger"
Repository = "https://github.com/reservoir-data/tap-honeybadger"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=8",
  "singer-sdk[testing]",
]
typing = [
  "mypy",
  "ty>=0.0.1a26",
  "types-requests",
  { include-group = "testing" },
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.5.19"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [
  "tap_honeybadger",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.deptry]
[tool.deptry.package_module_name_map]
mypy = "mypy"
types-requests = "requests"

[tool.pyproject-fmt]
max_supported_python = "3.14"
table_format = "long"

[tool.pytest]
[tool.pytest.ini_options]
addopts = [
  "-vvv",
  "--durations=10",
]
filterwarnings = [
  "error",
  "default:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
]

[tool.tox]
min_version = "4.43"
requires = [
  "tox",
  "tox-uv",
]
env_list = [
  "dependencies",
  "typing",
  { product = [
    { prefix = "3.", start = 12 },
  ] },
]
[tool.tox.env]
dependencies.dependency_groups = [ "testing" ]
dependencies.commands = [ [ "deptry", "." ] ]
typing.dependency_groups = [ "testing", "typing" ]
typing.commands = [
  [ "mypy", "--strict", "tap_honeybadger", "tests" ],
  [ "ty", "check", "tap_honeybadger", "tests" ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_HONEYBADGER_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
